--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,21 @@
 .DS_Store
-Thumbs.db
-node_modules/
-package-lock.json
-yarn.lock
-*.log
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Editor directories and files
-.vscode
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
