--- a/package.json
+++ b/package.json
@@ -1,70 +1,52 @@
 {
+  "name": "fft",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "watch": "webpack --watch --config ./webpack/webpack.config.js --mode=development",
-    "dev": "webpack-dev-server --hot --config ./webpack/webpack.config.js --dev",
-    "production": "SET NODE_ENV=production webpack --config ./webpack/webpack.config.js --display-entrypoints",
-    "rmdist": "rimraf dist"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.8.3",
-    "autoprefixer": "^9.7.4",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "cache-loader": "^4.1.0",
-    "cross-env": "^3.2.4",
-    "css-loader": "^3.4.2",
-    "cssnano": "^4.1.10",
-    "deepmerge": "^4.2.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "normalize.css": "^8.0.0",
-    "object-path": "^0.11.4",
-    "path": "^0.12.7",
-    "postcss-assets": "^5.0.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-hexrgba": "^1.0.2",
-    "postcss-import": "^11.1.0",
-    "postcss-inherit": "^4.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^3.0.0",
-    "postcss-reporter": "^5.0.0",
-    "postcss-scss": "^2.0.0",
-    "postcss-sorting": "^3.1.0",
-    "style-loader": "^0.23.1",
-    "stylelint": "^13.0.0",
-    "stylelint-webpack-plugin": "^1.2.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.6.2",
-    "vue-lazyload": "^1.3.3",
-    "vue-loader": "^15.8.3",
-    "vue-router": "^2.8.1",
-    "vue-session": "^0.9.8",
-    "vue-template-compiler": "^2.6.11",
-    "vuex": "^2.5.0",
-    "vuex-localstorage": "^1.0.0",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.10.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "lint:fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "fibers": "^5.0.0",
+    "core-js": "^3.6.4",
     "moment": "^2.25.3",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "stylelint-order": "^4.0.0",
-    "tailwindcss": "^1.1.4",
-    "vue": "^2.6",
-    "vuetify": "^2.2.27",
-    "vuetify-loader": "^1.4.3"
+    "moment-timezone": "^0.5.31",
+    "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
+    "vue-meta": "^2.3.3",
+    "vue-nprogress": "^0.1.5",
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.28",
+    "vuex": "^3.1.3"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.3.0",
+    "@vue/cli-plugin-eslint": "~4.3.0",
+    "@vue/cli-plugin-router": "~4.3.0",
+    "@vue/cli-plugin-vuex": "~4.3.0",
+    "@vue/cli-service": "~4.3.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
